# structure-ocr-app

./: .gitignore  AGENTS.md  AII-11-GAP-ANALYSIS.md  Makefile  README.md  architecture.md  opencode-ultrawork-prompt.md  product.md  requirements.md  ui-spec.md  workflow.md
.cursor/rules/: openviking-context.mdc
.sisyphus/: boulder.json  ralph-loop.local.md
.sisyphus/evidence/: phase1-completion-report.md
OpenViking/: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  ov.local-ollama.json  ov.local.json  pyproject.toml  script.sh
OpenViking/bot/: README.md  README_CN.md  package-lock.json
OpenViking/deploy/: .env.example  ov.ollama.conf.template  start-openviking-mcp-for-cursor.sh  start-openviking-ollama.sh
OpenViking/docs/: project-onboarding-script.md
OpenViking/examples/: ov.conf.example  ovcli.conf.example
aigold-backend/: design.md
automation/: README.md  controller.py  state.json  tasks.json
backend/: pyproject.toml
backend/app/: main.py  ocr.py  validation.py  vlm.py
backend/tests/: test_api.py
claw-code/: .gitignore  README.md
config/: tool-routing.example.yaml
frontend/: index.html  package-lock.json  package.json
openclaw/: readme.md
openinterview/: LangGraph-demo.py
paperclip-demo/: .env.compose.example  docker-compose.yml  paperclipai-2026.318.0.tgz
prompts/: cursor-reviewer.md  opencode-automation-runner.md  opencode-control-plane.md  opencode-quota-aware-control-plane.md
stocks_analysis.py/: AGENTS.md  README.md  ai_investment.db  ai_investment_analysis_20260209_221043.md  ai_investment_analysis_20260209_221049.md  ai_investment_analysis_20260211_190220.md  analysis_engine.py  config.py  curl_fetcher.py  data_collector.py  data_collector_simple.py  db_schema.sql  deploy.sh  diagnose_network.py  explore_sector_spot.py  final_solution.py  find_functions.py  pyproject.toml  requirements.txt  scheduler.py  test_akshare_noproxy.py  test_alternatives.py  test_constituent.py  test_session_patch.py  test_sina.py  test_ths_cons.py  test_ths_info.py  test_with_retry.py
stocks_analysis.py/.continue/rules/: chinese-character-length-limitation.md
structure-ocr-app/: .gitignore  Makefile  README.md  architecture.md  task-orchestration.md
structure-ocr-app/backend/: README.md  pyproject.toml
structure-ocr-app/backend/app/: main.py  ocr.py
structure-ocr-app/backend/tests/: test_api.py
(+1470 files in other folders)
